Add position metadata.
Added position metadata to hold position dividend projected in wallet currency. Updated UpdateWalletDividendYearProjectedHandler to update position dividend projected in the metadata.

--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -51,10 +51,10 @@
                         <td>
                             <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date("n") }}">{{ "now"|date("M") }}</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-year-month-1">-</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-previous-month-1">-</span>
                         </td>
                     </tr>
@@ -62,10 +62,10 @@
                         <td>
                             <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date_modify("+1 month")|date("n") }}">{{ "now"|date_modify("+1 month")|date("M") }}</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-year-month-2">-</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-previous-month-2">-</span>
                         </td>
                     </tr>
@@ -73,10 +73,10 @@
                         <td>
                             <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date_modify("+2 months")|date("n") }}">{{ "now"|date_modify("+2 months")|date("M") }}</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-year-month-3">-</span>
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             <span class="info-box-number js-wallet-dividend-previous-month-3">-</span>
                         </td>
                     </tr>
