--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -193,6 +193,18 @@
 
             positionDividendCrudManager.render();
 
+            // Tweak button toggle main menu to show/hide columns
+            $('.sidebar-toggle').on(
+                'click',
+                function(e) {
+                    let $button = $(e.currentTarget);
+
+                    if ($button.data('toggle') === 'push-menu') {
+                        this.toggleExpanded();
+                    }
+                }.bind(positionDividendCrudManager)
+            );
+
             window.positionDividendCrudManager = positionDividendCrudManager;
         });
     </script>
