--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-8">
-        <div class="box">
-            <div class="box-header with-border">
+        <div class="box js-dividend-panel">
+            <div class="box-header no-border">
                 <h3 class="box-title">{{ 'Dividends'|trans }}</h3>
 
                 <div class="box-tools pull-right">
@@ -12,10 +12,10 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                {% embed 'Components/ui/crud-manage-table.html.twig' with {
+                {% embed 'Components/Panel/panel-table.html.twig' with {
                     'entity_name': wallet_position_dividend_entity_name,
                     'fields': wallet_position_dividend_fields,
-                    'js_crud_manage_class': 'js-position-dividend-crud-manage-row-box',
+                    'js_panel_class': 'js-position-dividend-panel-box',
                     'border': 0
                 }%}
                 {% endembed %}
@@ -84,6 +84,32 @@
                 </table>
             </div>
             <!-- /.info-box-content -->
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">{{ 'Coming Dividends'|trans }}</h3>
+
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        {% embed 'Components/ui/table.html.twig' with {
+                            'entity_name': wallet_coming_dividend_entity_name,
+                            'fields': wallet_coming_dividend_fields,
+                            'js_table_class': 'js-coming-dividend-table-row-box',
+                            'border': 0
+                        }%}
+                        {% endembed %}
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            </div>
         </div>
     </div>
 </div>
