--- a/templates/wallets/partial/operation-box.html.twig
+++ b/templates/wallets/partial/operation-box.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="box">
-            <div class="box-header with-border">
+        <div class="box js-operation-panel">
+            <div class="box-header no-border">
                 <h3 class="box-title">{{ 'Operations'|trans }}</h3>
 
                 <div class="box-tools pull-right">
@@ -12,11 +12,14 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                {% embed 'Components/ui/crud-manage-table.html.twig' with {
+                {% embed 'Components/Panel/panel-table.html.twig' with {
                     'entity_name': wallet_operation_entity_name,
                     'fields': wallet_operation_fields,
-                    'js_crud_manage_class': 'js-operation-crud-manage-row-box',
-                    'border': 0
+                    'js_panel_class': 'js-operation-panel-box',
+                    'border': 0,
+                    'form': wallet_operation_form,
+                    'search_width': wallet_operation_search_width,
+                    'swalOptionsName': 'swalOperationOptions'
                 }%}
                 {% endembed %}
             </div>
