--- a/templates/wallets/partial/position-box.html.twig
+++ b/templates/wallets/partial/position-box.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="box">
-            <div class="box-header with-border">
+        <div class="box js-position-panel">
+            <div class="box-header no-border">
                 <h3 class="box-title">{{ 'Positions'|trans }}</h3>
 
                 <div class="box-tools pull-right">
@@ -12,11 +12,12 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                {% embed 'Components/ui/crud-manage-table.html.twig' with {
+                {% embed 'Components/Panel/panel-table.html.twig' with {
                     'entity_name': wallet_position_entity_name,
                     'fields': wallet_position_fields,
-                    'js_crud_manage_class': 'js-position-crud-manage-row-box',
-                    'border': 0
+                    'js_panel_class': 'js-position-panel-box',
+                    'border': 0,
+                    'buttons': wallet_position_buttons,
                 }%}
                 {% endembed %}
             </div>
